--- a/ERB/게임_내_이벤트발생/오프닝처리.ERB
+++ b/ERB/게임_내_이벤트발생/오프닝처리.ERB
@@ -563,7 +563,7 @@ GETTIME
 CALL GAME_MODE_CHECK
 SELECTCASE RESULT
 	CASE 0 TO 모드카운트-1
-		LOCALS = %모드네임:RESULT%モード
+		LOCALS = %모드네임:RESULT% 모드
 	CASEELSE
 		LOCALS = ☆커스텀 모드
 ENDSELECT
@@ -572,9 +572,9 @@ LOCAL = RESULT
 IF FLAG:64 > 0
 	LOCALS:1 = ★GAMECLEAR
 ELSEIF ENEMY_TYPE_CHECK_F("BOSS") == 1
-	LOCALS:1 = {FLAG:3 - LOCAL + 1}마리쨰
+	LOCALS:1 = {FLAG:3 - LOCAL + 1}마리 째
 ELSE
-	LOCALS:1 = {FLAG:3 + LOCAL}마리쨰
+	LOCALS:1 = {FLAG:3 + LOCAL}마리 째
 ENDIF
 
 LOCALS:2 = {1000 + GAMEBASE_VERSION}
@@ -586,7 +586,7 @@ LOCALS:3 = {DAY}일차
 IF FLAG:64 > 0
 	PUTFORM %LOCALS,14,LEFT% %LOCALS:3,7,RIGHT% %LOCALS:1,12,RIGHT%    ver%LOCALS:2%
 ELSE
-	PUTFORM %LOCALS,14,LEFT% %LOCALS:3,7,RIGHT% %LOCALS:1,6,RIGHT%섬멸 중    ver%LOCALS:2%
+	PUTFORM %LOCALS,14,LEFT% %LOCALS:3,7,RIGHT% %LOCALS:1,6,RIGHT% 섬멸 중    ver%LOCALS:2%
 ENDIF
 
 
