--- a/ERB/게임_내_행동실행처리/ACTION_GATHER_INFORMATION.ERB
+++ b/ERB/게임_내_행동실행처리/ACTION_GATHER_INFORMATION.ERB
@@ -266,7 +266,7 @@ SELECTCASE ARG
 				LOCALS = 여성
 			ENDIF
 			SIF LOCAL > 1
-				LOCALS + 들
+				LOCALS += "들"
 			SIF LOCAL >= 3
 				PRINT 하룻밤에 
 			PRINTFORM {LOCAL}명
