--- a/ERB/캐릭터관련/PREGNANT_CHILD_BIRTH.ERB
+++ b/ERB/캐릭터관련/PREGNANT_CHILD_BIRTH.ERB
@@ -1181,7 +1181,7 @@ FONTBOLD
 PRINTL 2차 성징
 FONTREGULAR
 
-PRINTFORML %PRINT_CALLNAME(TARGET)%%이(가) 성장하여 체질이 다시금 바뀌었다!
+PRINTFORML %PRINT_CALLNAME(TARGET)%이(가) 성장하여 체질이 다시금 바뀌었다!
 PRINTW 
 ;백보지？　75% 확률로 백보지를 잃는다
 SIF RAND:4 != 0
