--- a/ERB/SHOP.ERB
+++ b/ERB/SHOP.ERB
@@ -74,7 +74,7 @@ ENDIF
 ;여기서부터 SHOP 화면 표시 부분
 
 DRAWLINE
-PRINTFORM INTERMISSION {DAY}일 쨰　　
+PRINTFORM INTERMISSION {DAY}일 째　　
 FONTBOLD
 SELECTCASE DAY % 7
 CASE 0
