--- a/ERB/게임_내_전투처리/ENCOUNT.ERB
+++ b/ERB/게임_내_전투처리/ENCOUNT.ERB
@@ -66,7 +66,7 @@ RETURN RESULT
 	;DEBUG
 	IF FLAG:999 == 1 && LOCAL:1 > 0
 		PRINTL 흑화 캐릭터 조우율 입력
-		PRINTFORML 현재 조우율：({LOCAL:2%}％)
+		PRINTFORML 현재 조우율：({LOCAL:2}％)
 		INPUT
 		LOCAL:2 = RESULT
 	ENDIF
