--- a/ERB/SHOP_TROPHY.ERB
+++ b/ERB/SHOP_TROPHY.ERB
@@ -260,7 +260,7 @@ ELSE
 		CALL PRINT_ACHIEVEMENT(226,"저런 데이터는 없었다고？！","능력을 특화시켜 보자",10,"지성 실수치 500 돌파","","")
 		CALL PRINT_ACHIEVEMENT(227,"전 L입니다","역시 난… 틀리지 않…았어……",10,"지성 실수치 1000 돌파","","")
 		CALL PRINT_ACHIEVEMENT(228,"불사신의 전사","？？：마법소녀가 쓰러지지 않아",20,"체력 실수치 10000 돌파","","")
-		CALL PRINT_ACHIEVEMENT(229,"Lion Heart","마법소녀라면 4기통 심장은 기본",20,"기력 실수치 10000 돌파","왜 맘이 맘이 자꾸 흔들리니","텔 미 와이〜")
+		CALL PRINT_ACHIEVEMENT(229,"Lion Heart","마법소녀라면 4기통 심장은 기본",20,"기력 실수치 10000 돌파","왜 맘이 맘이 자꾸 흔들리니","")
 		CALL PRINT_ACHIEVEMENT(230,"절륜 마법소녀","오죽하면 촉수조차 복상사할 정도라고……",20,"성내성 실수치 1000 돌파","","")
 		CALL PRINT_ACHIEVEMENT(231,"그랜드 마스터","초대 마법소녀도 격투가 주력기라 하더라",20,"근거리 전투기술 Lv9 달성","","")
 		CALL PRINT_ACHIEVEMENT(232,"전원 집중포화！","어찌 보면 제일 까다로운 포지션",20,"중거리 전투기술 Lv9 달성","","")
