CHARAMAKE.ERB 번역 및 굴림체 폰트 사용

--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA.ERB
@@ -1547,7 +1547,7 @@ ELSEIF (RESULT >= 0 && RESULT < 9999) && EXISTCSV(RESULT, 0) && RESULT != 999
 	SIF TALENT:ARG:고유캐릭터 == 0
 		NO:ARG = 0
 
-	;性格補正をリセット
+	;성격 보정をリセット
 	FOR LOCAL:3, 0, 7
 		LOCAL:1 = LOCAL:3
 		SIF LOCAL:3 > 2
@@ -1557,7 +1557,7 @@ ELSEIF (RESULT >= 0 && RESULT < 9999) && EXISTCSV(RESULT, 0) && RESULT != 999
 		MAXBASE:ARG:(LOCAL:1) = BASE:ARG:(LOCAL:1)
 	NEXT
 
-	;범용 캐릭터の場合、性格補正を재계산
+	;범용 캐릭터の場合、성격 보정を재계산
 	IF NO:ARG == 0
 		;체력などのBASE値の計算
 		CALL SEIKAKU_CHECK,"GET_TALENT_VALUE",ARG
@@ -1569,7 +1569,7 @@ ELSEIF (RESULT >= 0 && RESULT < 9999) && EXISTCSV(RESULT, 0) && RESULT != 999
 			SIF LOCAL:3 > 2
 				LOCAL:1 = LOCAL:3 + 7
 			LOCAL:2 = BASE:ARG:(LOCAL:1)
-			;性格補正
+			;성격 보정
 			BASE:ARG:(LOCAL:1) = SEIKAKU_HOSEI_F(LOCAL, LOCAL:1, LOCAL:2)
 			MAXBASE:ARG:(LOCAL:1) = BASE:ARG:(LOCAL:1)
 		NEXT
