--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SEIKAKU.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SEIKAKU.ERB
@@ -10,7 +10,7 @@ CALL LB
 LCOUNT = LINECOUNT
 $INPUT_LOOP
 VARSET LOCAL
-;性格補正をリセット
+;성격 보정をリセット
 FOR LOCAL:3, 0, 7
 	LOCAL:1 = LOCAL:3
 	SIF LOCAL:3 > 2
@@ -426,12 +426,12 @@ FOR LOCAL:3, 0, 7
 	SIF LOCAL:3 > 2
 		LOCAL:1 = LOCAL:3 + 7
 	LOCAL:2 = BASE:ARG:(LOCAL:1)
-	;性格補正
+	;성격 보정
 	BASE:ARG:(LOCAL:1) = SEIKAKU_HOSEI_F(LOCAL, LOCAL:1, LOCAL:2)
 	MAXBASE:ARG:(LOCAL:1) = BASE:ARG:(LOCAL:1)
 NEXT
 
-;性格による일인칭の設定
+;성격에 따른 일인칭 설정
 IF CSTR:ARG:4 == ""
 	IF TALENT:ARG:고풍적 && ISFEMALE(ARG)
 		CFLAG:ARG:8 = 20
