--- a/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_改造制服.ERB
+++ b/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_改造制服.ERB
@@ -146,13 +146,13 @@ ELSEIF CFLAG:42 != 306
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 0
 		PRINT 白
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 1
-		PRINT 黒
+		PRINT 검정
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 2
 		PRINT ピンク
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 3
 		PRINT 赤
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 4
-		PRINT 青
+		PRINT 파랑
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 5
 		PRINT グリーン
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 6
@@ -160,7 +160,7 @@ ELSEIF CFLAG:42 != 306
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 7
 		PRINT オレンジ
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 8
-		PRINT 紫
+		PRINT 보라
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 9
 		PRINT ネイビー
 	;しまパンならもう一色も
@@ -169,13 +169,13 @@ ELSEIF CFLAG:42 != 306
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 0
 			PRINT グレー
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 1
-			PRINT 黒
+			PRINT 검정
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 2
 			PRINT ピンク
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 3
 			PRINT 赤
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 4
-			PRINT 青
+			PRINT 파랑
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 5
 			PRINT グリーン
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 6
@@ -183,7 +183,7 @@ ELSEIF CFLAG:42 != 306
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 7
 			PRINT オレンジ
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 8
-			PRINT 紫
+			PRINT 보라
 		SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 2) == 9
 			PRINT ネイビー
 	ENDIF
@@ -194,9 +194,9 @@ ELSE
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 1
 		PRINT 白
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 2
-		PRINT 黒
+		PRINT 검정
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 3
-		PRINT 緑
+		PRINT 초록
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 4
 		PRINT 赤
 	SIF FIGURE_SPLIT(EQUIP:TARGET:LOCAL, 1) == 5
