--- a/ERB/무기및의상/의상관련/CLOTHDATA속옷.ERB
+++ b/ERB/무기및의상/의상관련/CLOTHDATA속옷.ERB
@@ -1132,9 +1132,9 @@ SIF CUSTOM:0 == 0
 SIF CUSTOM:0 == 1
 	PRINT [カラー：白]
 SIF CUSTOM:0 == 2
-	PRINT [カラー：黒]
+	PRINT [カラー：검정]
 SIF CUSTOM:0 == 3
-	PRINT [カラー：緑]
+	PRINT [カラー：초록]
 SIF CUSTOM:0 == 4
 	PRINT [カラー：赤]
 SIF CUSTOM:0 == 5
