--- a/ERB/지문/Slang/T_SHAPE（触手の形状）.ERB
+++ b/ERB/지문/Slang/T_SHAPE（触手の形状）.ERB
@@ -43,9 +43,9 @@ SELECTCASE ARGS:0
 		TWORD=真っ赤な
 	CASE "담홍","담홍색"
 		TWORD=淡い담홍색の
-	CASE "분홍","桃色"
+	CASE "분홍","분홍색"
 		TWORD=艶やかな桃色の
-	CASE "핑크","ピンク色"
+	CASE "핑크","핑크색"
 		TWORD=艶やかなピンク色の
 	CASE "살몬 핑크"
 		TWORD=鮮やかな살몬 핑크の
