--- a/ERB/무기및의상/의상관련/CLOTHDATA겉옷_통상.ERB
+++ b/ERB/무기및의상/의상관련/CLOTHDATA겉옷_통상.ERB
@@ -104,7 +104,7 @@ PRINTL 【耐久度】100
 SIF CUSTOM:0 == 0
 	PRINT [カラー：白]
 SIF CUSTOM:0 == 1
-	PRINT [カラー：黒]
+	PRINT [カラー：검정]
 SIF CUSTOM:0 == 2
 	PRINT [カラー：ピンク]
 
@@ -2057,23 +2057,23 @@ ELSE
 	PRINT [逆バニー
 ENDIF
 SIF CUSTOM:0 == 0
-	PRINT ：黒]
+	PRINT ：검정]
 SIF CUSTOM:0 == 1
-	PRINT ：赤]
+	PRINT ：빨강]
 SIF CUSTOM:0 == 2
 	PRINT ：白]
 SIF CUSTOM:0 == 3;統一感無いって？うっせえバニーの色表すなら絶対ピンク表記の方がえっちいだろ！！！！！！
 	PRINT ：ピンク]
 SIF CUSTOM:0 == 4
-	PRINT ：紫]
+	PRINT ：보라]
 SIF CUSTOM:0 == 5
-	PRINT ：青]
+	PRINT ：파랑]
 SIF CUSTOM:0 == 6
-	PRINT ：緑]
+	PRINT ：초록]
 SIF CUSTOM:0 == 7
-	PRINT ：黄色]
+	PRINT ：황색]
 SIF CUSTOM:0 == 8
-	PRINT ：橙色]
+	PRINT ：주황색]
 SIF CUSTOM:0 == 9
 	PRINT ：水色]
 SIF CUSTOM:1 == 3
@@ -2149,7 +2149,7 @@ CALL CLOTH_CUSTOMIZE_OPTION_COMMON(-999)
 
 IF RESULT == 0
 	PRINTL カラーリングを選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:0,"검정","빨강","白","핑크","보라","파랑","초록","노랑","橙色","水色","@@")
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:0,"검정","빨강","白","핑크","보라","파랑","초록","노랑","주황색","水色","@@")
 	CUSTOM:0 = RESULT
 ELSEIF RESULT == 10
 	PRINTL 布地を選択してください
@@ -2578,21 +2578,21 @@ PRINTL 【耐久度】130
 SIF CUSTOM:0 == 0
 	PRINT [カラー：紺]
 SIF CUSTOM:0 == 1
-	PRINT [カラー：黒]
+	PRINT [カラー：검정]
 SIF CUSTOM:0 == 2
 	PRINT [カラー：白]
 SIF CUSTOM:0 == 3
 	PRINT [カラー：灰]
 SIF CUSTOM:0 == 4
-	PRINT [カラー：紫]
+	PRINT [カラー：보라]
 SIF CUSTOM:0 == 5
-	PRINT [カラー：茶]
+	PRINT [カラー：다색]
 SIF CUSTOM:0 == 6
 	PRINT [カラー：赤]
 SIF CUSTOM:0 == 7
-	PRINT [カラー：青]
+	PRINT [カラー：파랑]
 SIF CUSTOM:0 == 8
-	PRINT [カラー：桃]
+	PRINT [カラー：분홍]
 SIF CUSTOM:0 == 9
 	PRINT [カラー：水色]
 
@@ -2888,19 +2888,19 @@ RETURN LOCAL
 SIF CUSTOM:0 == 0
 	PRINT [カラー：赤]
 SIF CUSTOM:0 == 1
-	PRINT [カラー：青]
+	PRINT [カラー：파랑]
 SIF CUSTOM:0 == 2
-	PRINT [カラー：黄]
+	PRINT [カラー：황색]
 SIF CUSTOM:0 == 3
-	PRINT [カラー：緑]
+	PRINT [カラー：초록]
 SIF CUSTOM:0 == 4
 	PRINT [カラー：白]
 SIF CUSTOM:0 == 5
-	PRINT [カラー：黒]
+	PRINT [カラー：검정]
 SIF CUSTOM:0 == 6
 	PRINT [カラー：ピンク]
 SIF CUSTOM:0 == 7
-	PRINT [カラー：紫]
+	PRINT [カラー：보라]
 SIF CUSTOM:0 == 8
 	PRINT [カラー：고스로리]
 
@@ -4622,7 +4622,7 @@ CALL CLOTH_CUSTOMIZE_OPTION_COMMON(-999)
 
 IF RESULT == 0
 	PRINTL 生地の色を選択してください
-	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:0,"水色","桃色","紅色","橙色","鶯色","山吹色","薄紫色","薄緑色","灰色","紺色","@@")
+	CALL CLOTH_CUSTOMIZE_OPTION_PRINT(CUSTOM:0,"水色","분홍색","紅色","주황색","鶯色","山吹色","薄紫色","薄緑色","灰色","紺色","@@")
 	CUSTOM:0 = RESULT
 ELSEIF RESULT == 10
 	PRINTL 유카타の柄を選択してください
@@ -4942,15 +4942,15 @@ PRINTL 【耐久度】70
 SIF CUSTOM:0 == 0
 	PRINT [カラー：赤]
 SIF CUSTOM:0 == 1
-	PRINT [カラー：青]
+	PRINT [カラー：파랑]
 SIF CUSTOM:0 == 2
-	PRINT [カラー：黄]
+	PRINT [カラー：황색]
 SIF CUSTOM:0 == 3
-	PRINT [カラー：緑]
+	PRINT [カラー：초록]
 SIF CUSTOM:0 == 4
 	PRINT [カラー：ピンク]
 SIF CUSTOM:0 == 5
-	PRINT [カラー：紫]
+	PRINT [カラー：보라]
 
 SIF CUSTOM:1 == 0
 	PRINT [チア部コスチューム]
@@ -8337,9 +8337,9 @@ SIF CUSTOM:0 == 0
 SIF CUSTOM:0 == 1
 	PRINT [カラー：白]
 SIF CUSTOM:0 == 2
-	PRINT [カラー：黒]
+	PRINT [カラー：검정]
 SIF CUSTOM:0 == 3
-	PRINT [カラー：緑]
+	PRINT [カラー：초록]
 SIF CUSTOM:0 == 4
 	PRINT [カラー：赤]
 SIF CUSTOM:0 == 5
@@ -8550,21 +8550,21 @@ SIF CUSTOM:1 == 6
 	PRINT [カチューシャ]
 
 SIF CUSTOM:0 == 0
-	LOCALS=:黒
+	LOCALS=:검정
 SIF CUSTOM:0 == 1
 	LOCALS=:紅
 SIF CUSTOM:0 == 2
-	LOCALS=:紫
+	LOCALS=:보라
 SIF CUSTOM:0 == 3
-	LOCALS=:桃
+	LOCALS=:분홍
 SIF CUSTOM:0 == 4
 	LOCALS=:水色
 SIF CUSTOM:0 == 5
-	LOCALS=:橙
+	LOCALS=:주황
 SIF CUSTOM:0 == 6
 	LOCALS=:翠
 SIF CUSTOM:0 == 7
-	LOCALS=:黄
+	LOCALS=:황색
 SIF CUSTOM:0 == 8
 	LOCALS=:白
 SIF CUSTOM:0 == 9
