캐릭터 성격창 문자 정렬

--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SEIKAKU.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SEIKAKU.ERB
@@ -42,11 +42,21 @@ PRINTFORML {ARG:0}번째 캐릭터『%NAME:ARG%』의 성격을 선택해 주십
 PRINTFORML ※순=공순, 공=공포(맨 오른쪽 공)
 DRAWLINE
 ;PRINTL 　　　　　　　　　　　　　　　　　　　　　　　　　　　　　  (사용x)
-PRINTL 　　　　　　　　　　　　　　　체　기　성　　공　방　민　지　　순　욕　굴　치　고　공　구상
+PRINTL 　　　　　　　　　　　　　　　 체　기　성　　공　방　민　지　　순　욕　굴　치　고　공　 구상
 FOR LOCAL, 0, SEIKAKU_NUM
 	SIF TALENT:ARG:(LOCAL + SEIKAKU_START) > 0
 		SETCOLOR 0,255,180
-	PRINTFORM 　　[{LOCAL, 2}] %TALENTNAME:(LOCAL + SEIKAKU_START),20,LEFT%
+	;0.394 버전까진 안 그랬는데 뉴스판와서 글자 정렬이 흐트러져서 직접 수동으로 바꿨다
+	SELECTCASE STRLENSU(TALENTNAME:(LOCAL + SEIKAKU_START))
+	CASE 5
+		PRINTFORM 　　[{LOCAL, 2}] %TALENTNAME:(LOCAL + SEIKAKU_START),15,LEFT%
+	CASE 4
+		PRINTFORM 　　[{LOCAL, 2}] %TALENTNAME:(LOCAL + SEIKAKU_START),16,LEFT%
+	CASE 3
+		PRINTFORM 　　[{LOCAL, 2}] %TALENTNAME:(LOCAL + SEIKAKU_START),17,LEFT%
+	CASE 2
+		PRINTFORM 　　[{LOCAL, 2}] %TALENTNAME:(LOCAL + SEIKAKU_START),18,LEFT%
+	ENDSELECT
 	RESETCOLOR
 	PRINTPLAIN 　
 	CALL SHOW_SEIKAKUHOSEI, LOCAL + SEIKAKU_START
