--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_변신_디폴트_구상.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_변신_디폴트_구상.ERB
@@ -129,7 +129,7 @@ ELSEIF LOCAL:0 == 22 || LOCAL:0 == 28
 	DATAFORM . ……맡겨 줘.
 	DATAFORM . ……갑니다.
 	DATAFORM . ……빨리 끝내자.
-	DATAFORM , 목표를 확인…… 전투 개시.
+	DATAFORM . 목표를 확인…… 전투 개시.
 	DATAFORM , 간다아ー앗……
 	DATAFORM . ……즉각 섬멸.
 	DATAFORM . ……방해돼.
