--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_EXP.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_EXP.ERB
@@ -167,7 +167,7 @@ IF TALENT:ARG:학생 > 0
 	SETCOLOR 105,105,105
 	SIF CFLAG:ARG:359 == 1
 		SETCOLOR 120,255,255
-		PRINT 　[13] 전학 왔다　　
+		PRINT 　[13] 전학생　　　 
 	RESETCOLOR
 ENDIF
 PRINTL 
