--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_STATUS_BONUS.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_STATUS_BONUS.ERB
@@ -89,7 +89,11 @@ PRINTL
 OBJ_VAR = 0
 MAG_VAR = 10
 FOR LCOUNT, 0, 7
-	PRINTFORM %BASENAME:OBJ_VAR, 6, LEFT%：{BASE:ARG:OBJ_VAR + FEAT_BONUS_F(ARG,LCOUNT), 4} → {BASE:ARG:OBJ_VAR + FEAT_BONUS_F(ARG,LCOUNT) + BNS_VAR:LCOUNT * MAG_VAR, 4}（\@ BNS_VAR:LCOUNT < 0 ? - # + \@{ABS(BNS_VAR:LCOUNT), 2}）
+	IF OBJ_VAR == 2
+		PRINTFORM %BASENAME:OBJ_VAR, 5, LEFT%：{BASE:ARG:OBJ_VAR + FEAT_BONUS_F(ARG,LCOUNT), 4} → {BASE:ARG:OBJ_VAR + FEAT_BONUS_F(ARG,LCOUNT) + BNS_VAR:LCOUNT * MAG_VAR, 4}（\@ BNS_VAR:LCOUNT < 0 ? - # + \@{ABS(BNS_VAR:LCOUNT), 2}）
+	ELSE
+		PRINTFORM %BASENAME:OBJ_VAR, 6, LEFT%：{BASE:ARG:OBJ_VAR + FEAT_BONUS_F(ARG,LCOUNT), 4} → {BASE:ARG:OBJ_VAR + FEAT_BONUS_F(ARG,LCOUNT) + BNS_VAR:LCOUNT * MAG_VAR, 4}（\@ BNS_VAR:LCOUNT < 0 ? - # + \@{ABS(BNS_VAR:LCOUNT), 2}）
+	ENDIF
 	PRINTPLAIN 　 
 
 	SETCOLOR 240, 240, 255
@@ -375,7 +379,7 @@ IF TALENT:ARG:소문을좋아하는친구 > 0
 ELSE
 	PRINT 소문을 좋아하는 친구（+ 0）
 ENDIF
-PRINTPLAIN  　
+PRINTPLAIN  　　　　　　 
 SETCOLOR 240, 240, 255
 SIF TALENT:ARG:소문을좋아하는친구 == 0
 	SETCOLOR 255, 255, 0
